--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <title>Phetolo Mphake_Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="Style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="Styles/Style.css">
 </head>
 <body>
-
+  <canvas id="particle-canvas"></canvas>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#home">Phetolo Mphake</a>
@@ -21,22 +22,12 @@
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.instagram.com/_mphake/" target="_blank">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.facebook.com/phetolo.mphake.3?rdid=uQLuMj8L6j7ou6yr&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F18rZbwJ8jh%2F" target="_blank">
-              <i class="fab fa-facebook"></i>
-            </a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/_mphake/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+          <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/phetolo.mphake.3" target="_blank"><i class="fab fa-facebook"></i></a></li>
         </ul>
       </div>
     </div>
   </nav>
-
-
   <section id="home" class="hero d-flex align-items-center">
     <div class="container text-white">
       <div class="row">
@@ -50,40 +41,70 @@
       </div>
     </div>
   </section>
-
-  
   <section id="about" class="container py-5">
     <h2>About Me</h2>
-    <p>I am a passionate game developer with experience in building 2D games. I use Unity, HTML, JavaScript and C# to bring ideas to life with creativity and performance in mind.</p>
+    <p>I am a passionate game developer with experience in building 2D games. I use Unity, HTML, JavaScript, and C# to bring ideas to life with creativity and performance in mind.</p>
   </section>
+<section id="projects" class="container py-5">
+  <h2 class="text-white">Projects</h2>
+  <div class="row g-4">
 
- 
-  <section id="projects" class="container py-5">
-    <h2>Projects</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card">
-          <img src="Assets/Screenshot 2025-06-03 191441.png" class="card-img-top" alt="Project 1">
-          <div class="card-body">
-            <h5 class="card-title">Through Space</h5>
-            <p class="card-text">A browser-based shooter game with collision and scoring.</p>
-          </div>
+    <!-- Project 1 -->
+    <div class="col-md-4">
+      <div class="card">
+        <img src="Assets/Screenshot 2025-06-13 145119.png" class="card-img-top" alt="Project 2">
+        <div class="card-body">
+          <h5 class="card-title">Invasion of Robo-Chickens (In Production)</h5>
+          <p class="card-text">Survive the invasion of space chickens in this retro-style platformer.</p>
         </div>
       </div>
     </div>
-  </section>
 
-  
+    <!-- Project 2 -->
+    <div class="col-md-4">
+      <div class="card">
+        <img src="Assets/wall.png" class="card-img-top" alt="Project 3">
+        <div class="card-body">
+          <h5 class="card-title">Tsotsi (Concept)</h5>
+          <p class="card-text">A game exploring the narrative and struggles of South African townships.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="col-md-4">
+      <div class="card">
+        <img src="Assets/Screenshot 2025-06-03 191441.png" class="card-img-top" alt="Project 1">
+        <div class="card-body">
+          <h5 class="card-title">Through Space</h5>
+          <p class="card-text">A browser-based space shooter with scoring and collision mechanics.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Project 4 (video preview) -->
+    <div class="col-md-4">
+      <div class="card video-preview">
+        <video src="Assets/Untitled video - Made with Clipchamp (1).mp4" muted loop class="card-img-top project-video"></video>
+        <div class="card-body">
+          <h5 class="card-title">Through Space (Preview)</h5>
+          <p class="card-text">Hover to play the gameplay preview of Through Space.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
   <section id="contact" class="container py-5">
     <h2>Contact Me</h2>
     <p>Email: Phetolomaila61@email.com</p>
     <p>GitHub: <a href="https://github.com/Phetolo-M/" target="_blank">Phetolo-M</a></p>
     <p>Instagram: <a href="https://www.instagram.com/_mphake/" target="_blank">@_Mphake</a></p>
-    <p>Facebook: <a href="https://www.facebook.com/phetolo.mphake.3?rdid=uQLuMj8L6j7ou6yr&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F18rZbwJ8jh%2F" target="_blank">Phetolo Maila</a></p>
+    <p>Facebook: <a href="https://www.facebook.com/phetolo.mphake.3" target="_blank">Phetolo Maila</a></p>
   </section>
-
-  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="JavaScript.js"></script>
+  <script src="JavaScripts/JavaScript.js"></script>
 </body>
 </html>
