--- a/index.html
+++ b/index.html
@@ -106,5 +106,9 @@
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="JavaScripts/JavaScript.js"></script>
+  <a href="https://docs.google.com/document/d/1yeHOHpTrfRDOG2eLbvK34VDE5TqRRe0B/edit?usp=sharing&ouid=109859633224999272861&rtpof=true&sd=true" target="_blank" class="cv-float-btn" title="Download CV">
+  <i class="fas fa-file-download"></i> CV
+</a>
+
 </body>
 </html>
