--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Phetolo Mphake_Portfolio</title>
+  <title>Phetolo Mphake Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
@@ -11,6 +11,8 @@
 </head>
 <body>
   <canvas id="particle-canvas"></canvas>
+
+  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#home">Phetolo Mphake</a>
@@ -19,84 +21,116 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+         <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/_mphake/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-          <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/phetolo.mphake.3" target="_blank"><i class="fab fa-facebook"></i></a></li>
-        </ul>
+         </ul>
       </div>
     </div>
   </nav>
-  <section id="home" class="hero d-flex align-items-center">
+
+  <!-- Hero Section -->
+  <section id="home" class="hero d-flex align-items-center" style="min-height: 100vh;">
     <div class="container text-white">
       <div class="row">
         <div class="col-md-6 d-flex flex-column justify-content-center">
           <h1 class="display-4">Phetolo Mphake</h1>
-          <p class="lead">Aspiring Game Developer | C# | Unity | Networking</p>
+          <p class="lead">Aspiring Game Developer | C# | Unity | Network Systems</p>
         </div>
         <div class="col-md-6 text-center">
-          <img src="Assets/Phetolo.jpeg" alt="Your Photo" class="img-fluid hero-img">
+          <img src="Assets/Phetolo.jpeg" alt="Your Photo" class="img-fluid hero-img rounded shadow">
         </div>
       </div>
     </div>
   </section>
-  <section id="about" class="container py-5">
-    <h2>About Me</h2>
-    <p>I am a passionate game developer with experience in building 2D games. I use Unity, HTML, JavaScript, and C# to bring ideas to life with creativity and performance in mind.</p>
+
+  <!-- Skills Section -->
+  <section id="skills" class="bg-dark text-white py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">Skills</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="skill-box p-3 text-center">
+           <i class="fas fa-server fa-2x mb-2"></i>
+
+            <h5>Network Systems</h5>
+            <p>Database Management, Data Analsit, telecomunication, Technial and systems support</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="skill-box p-3 text-center">
+            <i class="fas fa-code fa-2x mb-2"></i>
+            <h5>Programming</h5>
+            <p>C#, JavaScript, HTML, CSS,</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="skill-box p-3 text-center">
+            <i class="fas fa-paint-brush fa-2x mb-2"></i>
+            <h5>Creative Tools</h5>
+            <p>Unity, Blender, , krita, Visual Studio code</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
-<section id="projects" class="container py-5">
-  <h2 class="text-white">Projects</h2>
-  <div class="row g-4">
 
-    <!-- Project 1 -->
-    <div class="col-md-4">
-      <div class="card">
-        <img src="Assets/Screenshot 2025-06-13 145119.png" class="card-img-top" alt="Project 2">
-        <div class="card-body">
-          <h5 class="card-title">Invasion of Robo-Chickens (In Production)</h5>
-          <p class="card-text">Survive the invasion of space chickens in this retro-style platformer.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Project 2 -->
-    <div class="col-md-4">
-      <div class="card">
-        <img src="Assets/wall.png" class="card-img-top" alt="Project 3">
-        <div class="card-body">
-          <h5 class="card-title">Tsotsi (Concept)</h5>
-          <p class="card-text">A game exploring the narrative and struggles of South African townships.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Project 3 -->
-    <div class="col-md-4">
-      <div class="card">
-        <img src="Assets/Screenshot 2025-06-03 191441.png" class="card-img-top" alt="Project 1">
-        <div class="card-body">
-          <h5 class="card-title">Through Space</h5>
-          <p class="card-text">A browser-based space shooter with scoring and collision mechanics.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Project 4 (video preview) -->
-    <div class="col-md-4">
-      <div class="card video-preview">
-        <video src="Assets/Untitled video - Made with Clipchamp (1).mp4" muted loop class="card-img-top project-video"></video>
-        <div class="card-body">
-          <h5 class="card-title">Through Space (Preview)</h5>
-          <p class="card-text">Hover to play the gameplay preview of Through Space.</p>
-        </div>
-      </div>
-    </div>
-
-  </div>
+<!-- About Section -->
+<section id="about" class="container py-5">
+  <h2>About Me</h2>
+  <p>
+    I’m a passionate game developer, aiming to change the gaming industry. Studied a Diploma in Network Systems at Boston City Campus, and  currently pursuing a Bachelor of Arts in Game Design and Production at SAE Institute. My goal is to introduce a new genre.
+  </p>
 </section>
 
+  <!-- Projects Section -->
+  <section id="projects" class="container py-5 text-white">
+    <h2>Projects</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card">
+          <img src="Assets/Screenshot 2025-06-13 145119.png" class="card-img-top" alt="Project 1">
+          <div class="card-body">
+            <h5 class="card-title">Invasion of Robo-Chickens (In Production)</h5>
+            <p class="card-text">Survive the invasion of space chickens in this retro-style platformer.</p>
+          </div>
+        </div>
+      </div>
 
+      <div class="col-md-4">
+        <div class="card">
+          <img src="Assets/wall.png" class="card-img-top" alt="Project 2">
+          <div class="card-body">
+            <h5 class="card-title">Tsotsi (Concept)</h5>
+            <p class="card-text">A game exploring the narrative and struggles of South African townships.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <img src="Assets/Screenshot 2025-06-03 191441.png" class="card-img-top" alt="Project 3">
+          <div class="card-body">
+            <h5 class="card-title">Through Space</h5>
+            <p class="card-text">A browser-based space shooter with scoring and collision mechanics.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card video-preview">
+          <video src="Assets/Untitled video - Made with Clipchamp (1).mp4" muted loop class="card-img-top project-video"></video>
+          <div class="card-body">
+            <h5 class="card-title">Through Space (Preview)</h5>
+            <p class="card-text">Hover to play the gameplay preview of Through Space.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
   <section id="contact" class="container py-5">
     <h2>Contact Me</h2>
     <p>Email: Phetolomaila61@email.com</p>
@@ -104,11 +138,15 @@
     <p>Instagram: <a href="https://www.instagram.com/_mphake/" target="_blank">@_Mphake</a></p>
     <p>Facebook: <a href="https://www.facebook.com/phetolo.mphake.3" target="_blank">Phetolo Maila</a></p>
   </section>
+
+  <!-- CV Floating Button -->
+  <a href="https://docs.google.com/document/d/1yeHOHpTrfRDOG2eLbvK34VDE5TqRRe0B/edit?usp=sharing" 
+     target="_blank" class="cv-float-btn hidden" title="Download CV">
+    <i class="fas fa-file-download"></i> CV
+  </a>
+
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="JavaScripts/JavaScript.js"></script>
-  <a href="https://docs.google.com/document/d/1yeHOHpTrfRDOG2eLbvK34VDE5TqRRe0B/edit?usp=sharing&ouid=109859633224999272861&rtpof=true&sd=true" target="_blank" class="cv-float-btn" title="Download CV">
-  <i class="fas fa-file-download"></i> CV
-</a>
-
 </body>
 </html>
