--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,7 @@
            <i class="fas fa-server fa-2x mb-2"></i>
 
             <h5>Network Systems</h5>
-            <p>Database Management, Data Analsit, telecomunication, Technial and systems support</p>
+            <p>Database Management, Data Analsyt, telecomunication, Technial and systems support</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -80,7 +80,7 @@
 <section id="about" class="container py-5">
   <h2>About Me</h2>
   <p>
-    I’m a passionate game developer, aiming to change the gaming industry. Studied a Diploma in Network Systems at Boston City Campus, and  currently pursuing a Bachelor of Arts in Game Design and Production at SAE Institute. My goal is to introduce a new genre.
+    I’m a passionate game developer, aiming to change the gaming industry. Studied a Diploma in Network Systems at Boston City Campus, and  currently pursuing a Bachelor of Arts in Game Design and Production at SAE Institute. My goal is to introduce a new genre. 
   </p>
 </section>
 
@@ -93,7 +93,7 @@
           <img src="Assets/Screenshot 2025-06-13 145119.png" class="card-img-top" alt="Project 1">
           <div class="card-body">
             <h5 class="card-title">Invasion of Robo-Chickens (In Production)</h5>
-            <p class="card-text">Survive the invasion of space chickens in this retro-style platformer.</p>
+            <p class="card-text">Survive the invasion of space chickens in this retro-style platformer. platformer, made with unity</p>
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@
           <img src="Assets/wall.png" class="card-img-top" alt="Project 2">
           <div class="card-body">
             <h5 class="card-title">Tsotsi (Concept)</h5>
-            <p class="card-text">A game exploring the narrative and struggles of South African townships.</p>
+            <p class="card-text">A game exploring the narrative and struggles of South African townships. Top down mechanic. still in production Unity</p>
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
           <img src="Assets/Screenshot 2025-06-03 191441.png" class="card-img-top" alt="Project 3">
           <div class="card-body">
             <h5 class="card-title">Through Space</h5>
-            <p class="card-text">A browser-based space shooter with scoring and collision mechanics.</p>
+            <p class="card-text">A browser-based space shooter with scoring and collision mechanics. HTML, css, JavaScript. </p>
           </div>
         </div>
       </div>
@@ -140,7 +140,7 @@
   </section>
 
   <!-- CV Floating Button -->
-  <a href="https://docs.google.com/document/d/1yeHOHpTrfRDOG2eLbvK34VDE5TqRRe0B/edit?usp=sharing" 
+  <a href="https://docs.google.com/document/d/1yeHOHpTrfRDOG2eLbvK34VDE5TqRRe0B/edit?usp=sharing&ouid=109859633224999272861&rtpof=true&sd=true" 
      target="_blank" class="cv-float-btn hidden" title="Download CV">
     <i class="fas fa-file-download"></i> CV
   </a>
