--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,7 @@
            <i class="fas fa-server fa-2x mb-2"></i>
 
             <h5>Network Systems</h5>
-            <p>Database Management, Data Analsyt, telecomunication, Technial and systems support</p>
+            <p>Database Management, Data Analyst, telecomunication, Technial and systems support</p>
           </div>
         </div>
         <div class="col-md-4">
